Fix white behind legend close arrow

--- a/scss/map.scss
+++ b/scss/map.scss
@@ -86,8 +86,8 @@ $sqrt2: 1.4142135;
       text-indent: -9999px;
       width: 21px;
       color: #fff;
-      background: #fff;
-      background:url(/web/assets/img/next.png) no-repeat;
+      background: url(/web/assets/img/next.png) no-repeat;
+      background-color: #fff;
       background-position:center;
       background-size: 12px 20px;
       left: -46px;
